SLCORE-640 Replace calculatePathPrefixes(), downloadAllServerIssuesForFile() and syncServerIssues() with RPC services